--- a/package.json
+++ b/package.json
@@ -62,14 +62,15 @@
     "semver": "6.3.0",
     "style-loader": "0.23.1",
     "styled-components": "^5.1.1",
+    "svg-sprite-loader": "^5.0.0",
+    "swiper": "^6.1.2",
     "terser-webpack-plugin": "2.3.5",
     "ts-pnp": "1.1.6",
     "url-loader": "2.3.0",
     "webpack": "4.42.0",
     "webpack-dev-server": "3.10.3",
     "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "4.3.1",
-    "svg-sprite-loader": "^5.0.0"
+    "workbox-webpack-plugin": "4.3.1"
   },
   "scripts": {
     "serve": "node scripts/start.js",
